{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 55,
  "lineage": "cbad2944-6e4c-d84e-1795-7f5fc5508bc1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dad359ff462124ca",
            "arn": "arn:aws:ec2:eu-west-1:605531285191:instance/i-09465e1e938594837",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09465e1e938594837",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e6ed3f3792a3213",
            "private_dns": "ip-10-0-1-178.eu-west-1.compute.internal",
            "private_ip": "10.0.1.178",
            "public_dns": "ec2-3-249-113-78.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.249.113.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e24254c6ea63be27",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a436805e862a9ca4",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02c8ef542e124c9d3"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.allow-ssh",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dad359ff462124ca",
            "arn": "arn:aws:ec2:eu-west-1:605531285191:instance/i-0f862c23f128f5bfb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f862c23f128f5bfb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-014b3edf786a904e6",
            "private_dns": "ip-10-0-2-208.eu-west-1.compute.internal",
            "private_ip": "10.0.2.208",
            "public_dns": "ec2-34-249-117-106.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.249.117.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d9d3d416e41beec0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c966c18cf9c2c30b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02c8ef542e124c9d3"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.allow-ssh",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dad359ff462124ca",
            "arn": "arn:aws:ec2:eu-west-1:605531285191:instance/i-05f8445c8abd7739e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f8445c8abd7739e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0552d3d2a55c877ff",
            "private_dns": "ip-10-0-3-190.eu-west-1.compute.internal",
            "private_ip": "10.0.3.190",
            "public_dns": "ec2-54-246-26-96.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.246.26.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0199ca674098c3fb3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06648f1911ea63e4d",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02c8ef542e124c9d3"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.allow-ssh",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08f057fc7f8637648",
            "owner_id": "605531285191",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-02c0f987e4d56b6a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0da2a12b8454fa4bf",
            "owner_id": "605531285191",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f057fc7f8637648",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-02c0f987e4d56b6a2"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a8dc8ed64a6750d",
            "route_table_id": "rtb-0da2a12b8454fa4bf",
            "subnet_id": "subnet-0a436805e862a9ca4"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b0c44f7799b1d1e",
            "route_table_id": "rtb-0da2a12b8454fa4bf",
            "subnet_id": "subnet-0c966c18cf9c2c30b"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0296f6d46de227838",
            "route_table_id": "rtb-0da2a12b8454fa4bf",
            "subnet_id": "subnet-06648f1911ea63e4d"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605531285191:security-group/sg-02c8ef542e124c9d3",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c8ef542e124c9d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "605531285191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c0f987e4d56b6a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605531285191:subnet/subnet-0615b04d15afbc813",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0615b04d15afbc813",
            "map_public_ip_on_launch": false,
            "owner_id": "605531285191",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-02c0f987e4d56b6a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605531285191:subnet/subnet-082ccdfafd2f3c785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-082ccdfafd2f3c785",
            "map_public_ip_on_launch": false,
            "owner_id": "605531285191",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-02c0f987e4d56b6a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605531285191:subnet/subnet-04cc2639bbf70f189",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-04cc2639bbf70f189",
            "map_public_ip_on_launch": false,
            "owner_id": "605531285191",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-02c0f987e4d56b6a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605531285191:subnet/subnet-0a436805e862a9ca4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a436805e862a9ca4",
            "map_public_ip_on_launch": true,
            "owner_id": "605531285191",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-02c0f987e4d56b6a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605531285191:subnet/subnet-0c966c18cf9c2c30b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c966c18cf9c2c30b",
            "map_public_ip_on_launch": true,
            "owner_id": "605531285191",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-02c0f987e4d56b6a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605531285191:subnet/subnet-06648f1911ea63e4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06648f1911ea63e4d",
            "map_public_ip_on_launch": true,
            "owner_id": "605531285191",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-02c0f987e4d56b6a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605531285191:vpc/vpc-02c0f987e4d56b6a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0787e9c7c15f30935",
            "default_route_table_id": "rtb-015b9c285d08ddb94",
            "default_security_group_id": "sg-07c6f6d5cdd8b6e3d",
            "dhcp_options_id": "dopt-021d1f4697cc789ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02c0f987e4d56b6a2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-015b9c285d08ddb94",
            "owner_id": "605531285191",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}